force-app/main/default/objects/Amendment_Report__c/Amendment_Report__c.object-meta.xml
<CustomObject>
    <label>Amendment Report</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendments Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>