force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Additional_comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Additional_comments__c</fullName>
    <inlineHelpText>Optional field to note anything you wish to draw attention to.</inlineHelpText>
    <label>Additional comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>