force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Approval_details__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approval_details__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval details</label>
    <type>Text</type>
</CustomField>