force-app/main/default/objects/Amendment_Report__c/fields/I_RS_BGR_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_BGR_Approver__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_BGR_Approver__r.I_RS_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BGR Approver</label>
    <type>Text</type>
</CustomField>