force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Candidate_full_name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Candidate_full_name__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Candidate_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate full name</label>
    <type>Text</type>
</CustomField>