force-app/main/default/objects/Amendment_Report__c/fields/I_RS_dummy_field2__c.field-meta.xml
<CustomField>
    <fullName>I_RS_dummy_field2__c</fullName>
    <formula>&quot;Please click on the Form ID to view the form and attached amendment report before endorsing this form.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>