force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Exam_outcome__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Exam_outcome__c</fullName>
    <formula>TEXT(I_RS_Graduate_Research_Examination__r.I_RS_SDGR_Recommended_Exam_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Final exam outcome recommended by the Board of Graduate Research</inlineHelpText>
    <label>Exam outcome</label>
    <type>Text</type>
</CustomField>