force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Graduate_Research_Examination__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Graduate_Research_Examination__c</fullName>
    <inlineHelpText>Link to the candidate’s examination record</inlineHelpText>
    <label>Graduate Research Examination ID</label>
    <referenceTo>Graduate_Research_Examination__c</referenceTo>
    <relationshipLabel>Amendments Report</relationshipLabel>
    <relationshipName>Amendments_Report</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>