force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Instructions_for_candidates__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Instructions_for_candidates__c</fullName>
    <formula>&quot;Please attach your amendment report using the attachments tab at the top of the form.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructions for candidates:</label>
    <type>Text</type>
</CustomField>