force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Supervisor approval</fullName>
            </value>
            <value>
                <fullName>SDGR approval</fullName>
            </value>
            <value>
                <fullName>Chair BGR approval</fullName>
            </value>
            <value>
                <fullName>GRS Processing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>