force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Student_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_Email__c</fullName>
    <label>Student Email</label>
    <type>Email</type>
</CustomField>