force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Student_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Amendments_Report3</relationshipName>
    <type>Lookup</type>
</CustomField>