force-app/main/default/objects/Amendment_Report__c/fields/I_RS_Thesis_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_Title__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Short_Thesis_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thesis title</label>
    <type>Text</type>
</CustomField>