force-app/main/default/objects/Amendment_Report__c/validationRules/Lock_Status_for_researchers.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Status_for_researchers</fullName>
    <active>true</active>
    <errorConditionFormula>$User.I_RS_Is_Researcher_User__c = &apos;1&apos; &amp;&amp; 
ISCHANGED(I_RS_Status__c)</errorConditionFormula>
    <errorMessage>You do not have permission to change to this status. Please contact GRS.</errorMessage>
</ValidationRule>